# RustiQ

./: AGENTS.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  numerical_discrepancy.md
.github/workflows/: ci.yml
assets/syntaxes/: XYZ.sublime-syntax
benches/: eri_timings.rs
samples/: calculation.toml  invalid_diagnostics.toml
samples/advanced_basis/: README.md
samples/benzene/: benzene.xyz
samples/benzene/cc-pvdz/: calculation.toml
samples/cholesterol/: cholesterol.xyz
samples/cholesterol/sto-3g/: calculation.toml
samples/ethanol/6-31g/: calculation.toml
samples/ethanol/cc-pvdz/: calculation.toml
samples/ethanol/sto-3g/: README.md  calculation.toml  pyscf_reference.py
samples/ethanol_sto3g_stress/: README.md  calculation.toml  ethanol.xyz
samples/h2/: calculation.toml  molecule.xyz
samples/h2/6-31g/: calculation.toml
samples/h2/cc-pvdz/: calculation.toml
samples/h2/sto-3g/: calculation.toml  mp2_calculation.toml
samples/h2o/: calculation.toml  h2o.xyz
samples/h2o/6-31g/: calculation.toml
samples/h2o/cc-pvdz/: calculation.toml
samples/h2o/sto-3g/: calculation.toml
samples/oh/: oh.xyz
samples/oh/sto-3g/: calculation.toml  mp2_calculation.toml  pyscf_reference.py
src/: env.rs  eri.rs  lib.rs  main.rs  math_utils.rs  mp2.rs  test_utils.rs
src/basis/: basis_file.rs  basis_store.rs  basisfile.rs  function_type.rs  metadata.rs  mod.rs  utils.rs
src/basis/gaussian/: basis.rs  contraction.rs  mod.rs  shell.rs
src/cli/: env.rs  mod.rs
src/cli/commands/: mod.rs  run_command.rs  runable.rs  runnable.rs
src/cli/commands/basis_command/: import_command.rs  (+4 more)
src/cli/ux/: banner.rs  basis_table.rs  mod.rs  mp2_report.rs  scf_report.rs
src/eri/: compact.rs  index.rs
src/hf/: core.rs  diis.rs  mod.rs  numerical_error.rs  scf.rs  scf_energy_details.rs  scf_iteration.rs  scf_observer.rs  scf_result.rs  uhf.rs
src/hf/density_guess/: core_hamiltonian.rs  mod.rs  one_electron.rs  random.rs  random_symmetric.rs  zero.rs
src/math_utils/: boys.rs
src/molecules/: atom.rs  atom_parse_error.rs  convert_length.rs  element_ext.rs  element_parse_error.rs  element_parser.rs  geometry.rs  geometry_parse_error.rs  mod.rs  molecule.rs  units.rs  xyz_parser.rs
src/runfile/: diagnostics.rs  hf.rs  mod.rs  mp2.rs  parser.rs  random_config.rs  validated.rs
src/runfile/global/: mod.rs  molecule_config.rs
src/runfile/hf/: density_guess_config.rs  guess_perturbation_config.rs  guess_type.rs  random_guess_config.rs
src/runfile/random_config/: distribution_config.rs
tests/: cli_samples.rs
tests/data/: sto-3g.json
(+19 files in other folders)
