[package]
name = "RustiQ"
description = "The modern rust quantum chemistry software"
authors = ["Mickaël Véril"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["online"]
online = ["dep:indicatif", "dep:reqwest", "dep:tokio"]

[dependencies]
reqwest = { version = "0.12.*", default-features = false, optional = true, features = [
  "json",
  "blocking",
  "rustls-tls",
] }
clap = { version = "4.5.20", features = ["cargo", "derive"] }
dirs = "5.0"
indicatif = { version = "0.17", optional = true }
nalgebra = { version = "0.33.*", features = ["rayon"] }
physical_constants = "0.5"
periodic_table = "0.5"
rayon = "1.10"
tokio = { version = "1.40", features = ["full"], optional = true }
serde_json = "1.0.*"
toml = "0.8"
serde = { version = "1.0.*", features = ["derive"] }
cached = "0.53"
ndarray = "0.16"
nshare = { version = "0.9.*", default-features = false, features = [
  "nalgebra",
  "ndarray",
  "nalgebra_std",
] }
arrayvec = "0.7.*"
bounded-vec-deque = "0.1.1"
thiserror = "1.0.*"
rand = "0.8.5"
special = { version = "0.11.2", default-features = false, features = ["std"] }
factorial = "0.4.0"
approx = "0.5.1"
tabled = "0.16.0"
