[package]
name = "RustiQ"
description = "The modern rust quantum chemistry software"
authors = ["Mickaël Véril"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["online"]
online = ["dep:indicatif", "dep:reqwest", "dep:tokio"]

[dependencies]
anyhow = "1"
reqwest = { version = "0.13", default-features = false, optional = true, features = [
  "json",
  "blocking",
  "rustls",
] }
clap = { version = "4.6", features = ["cargo", "derive"] }
dirs = "6"
indicatif = { version = "0.18", optional = true }
nalgebra = { version = "0.34", features = ["rayon"] }
physical_constants = "0.5"
periodic_table = "0.5"
rayon = "1"
tokio = { version = "1", features = ["fs", "io-util", "rt"], optional = true }
serde_json = "1.0.*"
toml = "1"
serde = { version = "1", features = ["derive"] }
cached = "1"
delegate = "0.13"
ndarray = "0.17"
nshare = { version = "0.10", default-features = false, features = [
  "nalgebra",
  "ndarray",
] }
arrayvec = "0.7.*"
bounded-vec-deque = "0.1.1"
thiserror = "2"
rand = "0.10"
rand_distr = "0.6"
special = { version = "0.11.2", default-features = false, features = ["std"] }
factorial = "0.4.0"
approx = "0.5.1"
tabled = "0.20"
humantime = "2"

[dev-dependencies]
rstest = "0.26"
proptest = "1"
